# docintel-rag

./: .gitignore  DEPLOY.md  README.md  TECHNICAL.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  schemas.py  security.py
backend/app/chunking/: chunker.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/db/: base.py  models.py  session.py
backend/app/documents/: repository.py
backend/app/embeddings/: factory.py
backend/app/ingestion/: __init__.py  csv_txt.py  detector.py  docx.py  models.py  normalizer.py  pdf.py  pipeline.py  pptx.py  vision.py  xlsx.py
backend/app/llm/: factory.py  prompts.py
backend/app/observability/: tracing.py
backend/app/rag/: indexer.py  query.py
backend/migrations/: env.py
backend/sample_docs/: Data-PAUD-Jakarta-Timur.xlsx  KAK-Penataan-Gedung-Magelang.docx  KAK-Satu-Data-Rembang.docx  Paparan-DJPK-DAK-Nonfisik-Pendidikan.pptx  Paparan-DJPK-Dampak-Covid-Ekonomi.pptx  SK-Lurah-Jakarta-Timur.xlsx  sample_questions.md
backend/scripts/: ask.py  seed_sample_docs.py
backend/tests/: conftest.py  test_api_health.py  test_chunker.py  test_csv_txt.py  test_db.py  test_detector.py  test_documents.py  test_docx.py  test_e2e.py  test_edge_cases.py  test_embeddings.py  test_indexing.py  test_llm.py  test_normalizer.py  test_pdf.py  test_pptx.py  test_query.py  test_query_api.py  test_retrieval.py  test_security.py  test_smoke.py  test_tracing.py  test_vectorstore.py  test_vision.py  test_xlsx.py
(+36 files in other folders)
